# smoothlife

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  grid.rs  main.rs  utils.rs
