[package]
name = "smoothlife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.0"
clap = { version = "4.5.1", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3